# zephyr

./: west.yml
include/zephyr/delta/: delta.h  delta_algorithm.h
samples/subsys/delta/: CMakeLists.txt  README.rst  prj.conf
samples/subsys/delta/boards/: nrf7002dk_nrf5340_cpuapp.overlay  stm32f429i_disc1.overlay
samples/subsys/delta/patches/: create_target_firmware.patch
samples/subsys/delta/scripts/: benchmark.py  generate_patch.py  requirements.txt
samples/subsys/delta/src/: delta_apply.c  delta_apply.h  main.c
samples/subsys/delta/sysbuild/: mcuboot.conf  mcuboot.overlay
samples/subsys/mgmt/delta/: README.rst  prj.conf  sample.yaml
samples/subsys/mgmt/delta/patches/: create_target_firmware.patch
samples/subsys/mgmt/delta/src/: delta_apply.c  delta_apply.h  main.c
samples/subsys/mgmt/delta/sysbuild/mcuboot/: prj.conf
subsys/: CMakeLists.txt  Kconfig
subsys/delta/: CMakeLists.txt  Kconfig  delta.c
subsys/delta/backend_diff/: CMakeLists.txt  delta_backend_bsdiff.c
subsys/mgmt/delta/: CMakeLists.txt  delta.c
subsys/mgmt/delta/backend_diff/: delta_backend_bsdiff.c
